Changes with APR-util 1.3.0

  *) Portably implement testdate's long-time constants to solve
     compilation faults where #LL isn't valid.  [Curt Arnold]

  *) Use buffered I/O with SDBM.  [Joe Schaefer]

  *) Unify parsing of prepared statements and add binary argument functions
     to DBD [Bojan Smojver with help from many on the APR list]

  *) Support building DBD drivers as DSOs; use --enable-dbd-dso flag
     to configure.  [Joe Orton, Bojan Smojver]

  *) Rewrite detection of expat in configure to fix build on e.g. biarch
     Linux platforms.  PR 28205.  [Joe Orton]

  *) Add apr_thread_pool implementation.  [Henry Jen <henryjen ztune.net>]

  *) Add support for Berkeley DB 4.5 to the configure scripts.
     [Garrett Rooney]

  *) Allow apr_queue.h to be included before other APR headers.
     PR 40891 [Henry Jen <henryjen ztune.net>]

  *) Fix precedence problem in error checking for sdbm dbm back end.
     PR 40659 [Larry Cipriani <lvc lucent.com>]

  *) Add an apr_reslist_acquired_count, for determining how many outstanding
     resources there are in a reslist.  [Ryan Phillips <ryan trolocsis.com>]

  *) Provide folding in autogenerated .manifest files for Win32 builders
     using VisualStudio 2005  [William Rowe]

  *) Implement DBD transaction modes
     [Bojan Smojver with help from many on the APR list]

  *) Implement prepared statement support in SQLite3 DBD driver
     [Bojan Smojver]

  *) Add get (column) name to apr_dbd API
     [Bojan Smojver <bojan rexursive.com>] and
     [Chris Darroch <chrisd pearsoncmg com>]

  *) Make the DBD autoconf-glue use LDFLAGS instead of LIBS in several
     places, fixing some configure issues on Solaris.
     [Henry Jen <henryjen ztune.net>]

  *) Make apr_dbd.h work as a stand alone header, without needing other
     files to be included before it. [Henry Jen <henryjen ztune.net>]

  *) On platforms that use autoconf stop automatically linking against